# Disposight

./: .gitignore  .mcp.json  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  test_email_redesign.py  test_email_verified.py  test_emails.py  test_emails_quick.py
backend/app/: config.py  main.py  plan_limits.py  rate_limit.py
backend/app/contacts/: contact_finder.py  email_builder.py  email_validator.py  pipeline.py
backend/app/db/: session.py
backend/app/email/: sender.py
backend/app/ingestion/: base.py  courtlistener.py  gdelt_news.py  globenewswire.py  sec_edgar.py  warn_act.py
backend/app/models/: __init__.py  alert.py  alert_history.py  company.py  contact.py  email_pattern.py  pipeline_activity.py  raw_signal.py  signal.py  signal_source.py  subscription.py  tenant.py  user.py  watchlist.py
backend/app/processing/: company_enricher.py  deal_scorer.py  device_filter.py  disposition.py  entity_extractor.py  gap_detector.py  justification.py  llm_client.py  pipeline.py  prompts.py  risk_scorer.py  signal_analyzer.py  timing.py  (+2 more)
backend/scripts/: data_quality_cleanup.sql
backend/tests/: test_auth_admin.py  test_base_collector.py  test_billing_helpers.py  test_config.py  test_contacts.py  test_deal_scorer.py  test_device_filter.py  test_disposition.py  test_gap_detector.py  test_ingestion_classifiers.py  test_justification.py  test_pipeline_dedup.py  test_pipeline_workflow.py  test_plan_limits.py  test_rate_limit.py  test_security.py  test_timing.py  test_warn_act_parser.py
(+167 files in other folders)
