[project]
name = "disposight-backend"
version = "0.1.0"
description = "DispoSight - ITAD intelligence platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "supabase>=2.0.0",
    "arq>=0.26.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "resend>=2.0.0",
    "stripe>=10.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
    "python-dateutil>=2.9.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.5",
    "pyjwt>=2.11.0",
    "cryptography>=46.0.4",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.52.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
